added website links to the footer logos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,16 +77,22 @@
 
 				<div class="row">
 					<div class="small-4 columns sponsor-logo-container">
-						<img src="http://cdn.getup.org.au/image_16593_full.png" alt="Bank Australia Logo" width="95" height="33" class="sec-sponsor" />
-						<p class="sponsor-name"> Hero Sponsor </p>
+						<a href="https://bankaust.com.au/">
+							<img src="http://cdn.getup.org.au/image_16593_full.png" alt="Bank Australia Logo" width="95" height="33" class="sec-sponsor" />
+							<p class="sponsor-name"> Hero Sponsor </p>
+						</a>
 					</div>
 					<div class="small-4 columns sponsor-logo-container">
-						<img src="{{ site.baseurl }}/images/futuresuper.png" alt="Future Super Logo" width="95" height="33" class="primary-sponsor" />
-						<p class="sponsor-name"> Principal Sponsor </p>
+						<a href="https://www.myfuturesuper.com.au/switch/join-future-super?utm_campaign=GetupPowerUp&utm_medium=Email&utm_source=Referral&utm_content=PowerUpInvitation&utm_safe=">
+							<img src="{{ site.baseurl }}/images/futuresuper.png" alt="Future Super Logo" width="95" height="33" class="primary-sponsor" />
+							<p class="sponsor-name"> Principal Sponsor </p>
+						</a>
 					</div>
 					<div class="small-4 columns sponsor-logo-container">
-						<img src="{{ site.baseurl }}/images/lush.png" alt="Lush Logo" width="95" height="33" class="sec-sponsor" />
-						<p class="sponsor-name"> Gold Sponsor </p>
+						<a href="https://au.lush.com/">
+							<img src="{{ site.baseurl }}/images/lush.png" alt="Lush Logo" width="95" height="33" class="sec-sponsor" />
+							<p class="sponsor-name"> Gold Sponsor </p>
+						</a>
 					</div>
 				</div> 
 				<div class="row">
