--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 				<div class="container">
 					<div class="company-name">					
 						<a href="https://www.getup.org.au/" target="_blank">
-							<img src="{{ site.baseurl }}/images/getup-logo-white.png" alt="GetUp Logo" width="95" height="33" class="nav__logo"/>
+							<img src="{{ site.baseurl }}/images/getup-logo-white.png" alt="GetUp Logo" class="nav__logo"/>
 						</a>					
 					</div>
 					{% include navigation.html %}
@@ -55,7 +55,7 @@
 			<div class="container">
 				<div class="company-name">					
 					<a href="https://www.getup.org.au/" target="_blank">
-						<img src="{{ site.baseurl }}/images/getup-logo-white.png" alt="GetUp Logo" width="95" height="33" class="nav__logo"/>
+						<img src="{{ site.baseurl }}/images/getup-logo-white.png" alt="GetUp Logo" class="nav__logo"/>
 					</a>					
 				</div>
 				{% include navigation.html %}
