revert colour change

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 $brand-color: #ffb6c1;
-$secondary-brand-color: #f44242;
+$secondary-brand-color: #ffb6c1;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
