made elements- and footer-background color into a variable

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,7 @@
 $brand-color: #4182e4;
 $secondary-brand-color: #4182e4;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
+$background-color: #2b2b40;
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
