--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" alt="Hydra Logo" width="95" height="33" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" width="95" height="33" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
@@ -44,7 +44,10 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} MyApp Ltd. • <a href="#">Terms</a> &amp; <a href="#">Privacy</a> • <a href="https://cloudcannon.com/">Template by CloudCannon</a></p>
+				<p class="copyright"> Made with <span style="color:#ad0000;">&#10084;</span> by
+					<a href="https://www.hammertimekassel.de/" target="_blank">Hammertime Kassel</a> •
+					Template by <a href="https://cloudcannon.com/">CloudCannon</a>
+				</p>
 			</div>
 		</footer>
 		<script>
