--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,14 @@
 		{% feed_meta %}
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+
+		<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
+		<link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
+		<link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#4182e4">
+		<meta name="msapplication-TileColor" content="#2d89ef">
+		<meta name="theme-color" content="#ffffff">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
