--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
 	<a class="nav-toggle" id="open-nav" href="#">&#9776;</a>
 	<a class="editor-link btn" href="cloudcannon:collections/_data/navigation.yml" class="btn"><strong>&#9998;</strong> Edit navigation</a>
-	{% for link in site.data.navigation %}
+	{% for link in site.data.navigation[page.lang] %}
 		{% assign class = "" %}
 		{% if link.highlight %}
 			{% assign class = class | append: " highlight" %}
