CHANGE remove multilingual

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -99,7 +99,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						{% for maker in site.data.makers[page.lang] %}
+						{% for maker in site.data.makers %}
 					  		<tr>
   								<td>
 										{{maker.name}}
