ADD registration forms

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -28,6 +28,8 @@
 			<div class="text editable">
 				<h2>{{site.data.lang[page.lang].offer_header}}</h2>
 
+				<p>{{site.data.lang[page.lang].offer_registration}}</p>
+
 				<p>{{site.data.lang[page.lang].offer_description}}</p>
 
 				<table class="default-table">
@@ -88,6 +90,8 @@
 			<div class="text editable">
 				<!-- Ich bin ein Maker / wir sind ein Makerspace und wollen helfen -->
 				<h2>{{site.data.lang[page.lang].support_header}}</h2>
+
+				{{site.data.lang[page.lang].support_registration}}
 
 				<table class="default-table">
 					<thead>
