CHANGE Slack text

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -91,7 +91,9 @@
 				<!-- Ich bin ein Maker / wir sind ein Makerspace und wollen helfen -->
 				<h2>{{site.data.lang[page.lang].support_header}}</h2>
 
-				{{site.data.lang[page.lang].support_registration}}
+				<p>{{site.data.lang[page.lang].support_registration}}</p>
+
+				{{site.data.lang[page.lang].support_description}}
 
 				<table class="default-table">
 					<thead>
@@ -142,7 +144,7 @@
 					 BUTTON
 					Wenn ihr euch als Hub eintragen wollt, schreibt bitte im Slack channels namens "Register Hub".
 					-->
-				{{site.data.lang[page.lang].support_description}}
+
 				<br>
 				<div class="button">
 					<a style="background: {{ plan.color }}"
