Add hubs/maker map

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -91,6 +91,8 @@
 				<!-- Ich bin ein Maker / wir sind ein Makerspace und wollen helfen -->
 				<h2>{{site.data.lang[page.lang].support_header}}</h2>
 
+				<iframe src="https://www.google.com/maps/d/embed?mid=1Sc7ZRpHDt-98-SCrfmRuFZNbLtF3I-uf" width="100%" height="480"></iframe>
+
 				<p>{{site.data.lang[page.lang].support_registration}}</p>
 
 				<!--
