FIX buttons display on mobile

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -14,6 +14,7 @@
 		<div class="cta">
 			<span class="button alt"><a href="#need">{{site.data.lang[page.lang].cta_need}}</a></span>
 			<span class="button alt"><a href="#maker">{{site.data.lang[page.lang].cta_maker}}</a></span>
+			<div class="clearfix"></div>
 		</div>
 		<!-- Wir listen ausschließlich Initiativen, die die (selbst) produzierten Dinge kostenlos oder
 		zum Selbstkostenpreis anbieten.-->
