FIX paypal donation button image

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -181,7 +181,7 @@
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="WPV9XMKVPRMTG" />
-<input type="image" src="http://www.walschutzaktionen.de/mediac/450_0/media/DIR_2929211/f2bc5538e8a5188dffff8048fffffff1.jpg" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Spenden mit dem PayPal-Button" />
+<input type="image" src="https://www.makervsvirus.org/images/paypal-donation.jpg" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Spenden mit dem PayPal-Button" />
 <img alt="" border="0" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1" height="1" />
 </form>
 
