ADD donation note

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -176,6 +176,9 @@
 		<div class="container flex">
 			<div class="text editable">
 				<h2>{{site.data.lang[page.lang].donate_header}}</h2>
+				<p>
+					{{site.data.lang[page.lang].fund_raising_note}}
+				</p>
 				<div id="paypal">
 					<p>{{site.data.lang[page.lang].cta_donate_paypal}}</p>
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
