changed some text on the main page

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -104,17 +104,10 @@
 				<p>{{site.data.lang[page.lang].offer_registration}}</p>
 
 				<!--
-				Wir suchen Leute, die:
-					- 3D-Drucke machen
-					- einen Laser-Cutter zur Verfügung haben
-					- bei der Logistik helfen wollen
-					- bei der Organisation helfen wollen
-
-					Das Ziel ist, dass sich Menschen selbstorganisiert zu lokal produzierenden Hubs zusammenfinden, die wir auf
-					dieser Website auflisten können. Dafür bieten wir den folgenden Slack workspace an, um Mitstreiter zu finden
-					oder existierende hilfsbedürftige Hubs zu unterstützen:
-					 BUTTON
-					Wenn ihr euch als Hub eintragen wollt, schreibt bitte im Slack channels namens "Register Hub".
+					Als lokaler Maker unterstützt du deinen regionalen Hub! Hier findest du lokale Ansprechpartner, Informationen und Unterstützung.
+					Zum Loslegen fehlen nur zwei Schritte:
+					Registiere dich hier als Maker.
+					Melde dich im deutschlandweiten Slack an und trete dort unter "Channels" dem nächsten lokalen Hub bei.
 					-->
 				{{site.data.lang[page.lang].support_description}}
 
@@ -125,6 +118,24 @@
 					{{site.data.lang[page.lang].support_join_slack}}</a>
 				</div>
 				<br>
+
+				<!--
+					Wo noch nicht vorhanden, suchen wir noch regionale Hubs als Zusammenschluss von Makern zur dezentralen Koordination.
+					Hier sprecht ihr euch untereinander ab, verteilt Material und Bedarfe, evtl. auch Lagerung und Verteilung.
+					Registriere dich als Hub hier.
+
+					Wir suchen nach Leuten, die:
+						- 3D Drucke fertigen
+						- einen Lasercutter zur Verfügung haben (oder Schutzfolie manuell schneiden)
+						- bei der Logistik helfen
+						- bei der Planung / Organisation helfen
+
+					Ziel ist es, dass sich Menschen lokal selbstorganisiert verbinden, um Produktionsmöglichkeiten zu schaffen. Diese bündeln wir übergreifend für den deutschsprachigen Raum. Für die Kommunikation nutzen wir den oben verlinken Slack Workspace.
+
+					Hier kommunizieren lokale Hubs untereinander und hier findet die zentrale Organisation statt.
+
+					Bitte beachte: Wir führen nur Initiativen auf, die ihre (selbst) produzierten Artikel kostenlos oder zum Selbstkostenpreis anbieten.
+					-->
 				<br>
 
 				<!--
