ADD google-site-verification for gsuite

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 		<link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#4182e4">
 		<meta name="msapplication-TileColor" content="#2d89ef">
 		<meta name="theme-color" content="#ffffff">
+		<meta name="google-site-verification" content="xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k" />
 		<meta name="google-site-verification" content="google-site-verification=xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
