--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		<meta name="google-site-verification" content="xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k" />
 		<meta name="google-site-verification" content="google-site-verification=xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k">
 
-		<script src="//ajax.googleapis.com/ajax/libs/d3js/5.15.0/d3.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
