--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,5 +1,5 @@
 .bottom-cta {
-	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%);
+	background: linear-gradient(to right, $brand-color 0%, $middle-gradient-color 100%);
 	color: #fff;
 	text-align: center;
 	margin: 0;
@@ -34,7 +34,7 @@
 .hero {
 	color: #ffffff;
 	text-align: center;
-	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
+	background: linear-gradient(to right, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
 	padding-top: 50px;
 
 	p {
