--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -21,7 +21,7 @@ header {
 	color: #fff;
 	padding: 20px 0;
 	background: $brand-color; /* Old browsers */
-	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
+	background: linear-gradient(to right, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
 
 	a {
 		color: #fff;
