removing shipping address

--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -97,7 +97,7 @@
 													<li>
 														<!-- # Liefern an -->
 														<b>{{site.data.lang[page.lang].offer_table_content_shipping}}</b><br>
-				  									{{ row['Addresse (für Anlieferung)'] }}
+				  									Im Hub fragen via Email
 													</li>
 												{% endif %}
 												<li>
