--- a/_includes/main-content.html
+++ b/_includes/main-content.html
@@ -40,7 +40,7 @@
 
 				<p><iframe src="https://www.google.com/maps/d/embed?mid=1Sc7ZRpHDt-98-SCrfmRuFZNbLtF3I-uf" width="100%" height="480"></iframe></p>
 				<p>
-					Nach Ort sortieren: <input type="input" id="search_addr_inp"> <input type="button" id="add_search" value="Search">
+					Nach Ort sortieren: <input type="input" id="search_addr_inp"> <input type="button" id="add_search" value="Suche nach Ort/PLZ">
 				</p>
 				<div id="offer-table-container">
 
