--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,12 +86,16 @@
 					);
 				 	$('#add_search').click( function () {
 						var input = $("#search_addr_inp")[0].value
-
+						var query = "q=" + encodeURIComponent(input);
+						if ($.isNumeric(input)) {
+							query="country=germany&postalcode=" + input;
+						}
 						$.ajax({
-							url: "https://nominatim.openstreetmap.org/search?format=json&q=" + encodeURIComponent(input)
+							url: "https://nominatim.openstreetmap.org/search?format=json&" + query
 							})
 						  	.done(function( data ) {
 								console.log(data[0].display_name);
+								$("#search_addr_inp")[0].value = data[0].display_name;
 								var x_tgt = data[0].lat;
 								var y_tgt =data[0].lon;
 								//var latlon_tgt = "48.1045885,11.5746896"
@@ -105,7 +109,6 @@
 										var dx = x_tgt - x;
 										var dy = y_tgt - y;
 										var distance = Math.sqrt(dx * dx + dy * dy);
-										console.log(distance);
 										this.cell(rowIdx, 4 ).data(distance).draw();
 									} else {
 										this.cell(rowIdx, 4 ).data(99999).draw();
