--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,7 @@
 		<meta name="msapplication-TileColor" content="#2d89ef">
 		<meta name="theme-color" content="#ffffff">
 		<meta name="google-site-verification" content="xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k" />
-		<meta name="google-site-verification" content="google-site-verification=xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k">
-
+		<meta name="google-site-verification" content="google-site-verification=xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k" />
 		<meta property="og:image" content="{{ site.baseurl }}/images/share01.png">
 		<meta property="og:image:type" content="image/png">
 		<meta property="og:image:width" content="1200">
