--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 		<meta name="theme-color" content="#ffffff">
 		<meta name="google-site-verification" content="xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k" />
 		<meta name="google-site-verification" content="google-site-verification=xS8QJX0WlXVwL2mfyQGM-fJE5rYrc5EqonRzcwEql9k" />
-		<meta property="og:image" content="{{ site.baseurl }}/images/share01.png">
+		<meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/images/share01.png">
 		<meta property="og:image:type" content="image/png">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
