--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -86,9 +86,6 @@ section + section {
 	margin: 60px 0;
 }
 
-.page h2 {
-	text-align: center;
-}
 
 blockquote {
 	padding: 18px 25px;
@@ -134,6 +131,9 @@ blockquote:before {
 .page {
 	margin-bottom: 0;
 	padding-bottom: 80px;
+	h1, h2 {
+		margin: auto;
+	}
 }
 
 .center-text {
