--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 		{% feed_meta %}
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/cmidas_icon.png">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" alt="Hydra Logo" width="95" height="33" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/cmidas_logo.png" alt="CMidas Logo" height="50" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
@@ -44,7 +44,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Vinicius Guimaraes Goecks • <a href="https://cloudcannon.com/">Webpage Template by CloudCannon</p>
+				<p class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} Vinicius Guimaraes Goecks • <a href="https://cloudcannon.com/">Webpage Template by CloudCannon</p>
 			</div>
 		</footer>
 		<script>
