--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-	font-family: "San Francisco", "Helvetica Neue", "Helvetica", "Arial";
+	font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial";
 }
 
 a {
@@ -29,13 +29,13 @@ h1 strong, h2 strong {
 }
 
 h1 {
-	font-weight: 300;
+	font-weight: 400;
 	font-size: 2.3em;
 	margin: 0;
 }
 
 h2 {
-	font-weight: 300;
+	font-weight: 400;
 	font-size: 2.2em;
 	margin: 0 0 30px 0;
 }
@@ -49,6 +49,6 @@ p, address {
 	font-size: 1.38em;
 	color: #666;
 	margin-bottom: 20px;
-	font-weight: 300;
+	font-weight: 400;
 	line-height: 1.4em;
 }
