--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/cmidas_logo.png" alt="CMidas Logo" height="45" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/cmidas_logo.png" alt="CMidas Logo" height="30" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
@@ -44,7 +44,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} Vinicius Guimaraes Goecks • <a href="https://cloudcannon.com/">Webpage Template by CloudCannon</p>
+				<p class="copyright">CMidas &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
 			</div>
 		</footer>
 		<script>
