--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
 					{% endfor %}
 				</div>
 				<p class="copyright">CMidas &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+				<p class="copyright">Anticipating future events can cause unintended consequences in the present, which in consequence leads to invalidation of preceding forecasts.</p>
 			</div>
 		</footer>
 		<script>
