--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
-$brand-color: #263543;
-$secondary-brand-color: #121D27;
+$brand-color: #363636;
+$secondary-brand-color: #1C1C1C;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 100%);
 
 // Breakpoints
