finished basic layout

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,6 @@
-$brand-color: #363636;
-$secondary-brand-color: #1C1C1C;
-$middle-gradient-color: mix($brand-color, $secondary-brand-color, 100%);
+$brand-color: #1B1B1B;
+$secondary-brand-color: #0E0E0E;
+$middle-gradient-color: mix($brand-color, $secondary-brand-color, 0%);
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
