--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -70,7 +70,7 @@ footer {
 	padding: 50px 0 50px 0;
 	font-size: 1.1em;
 	position: relative;
-	background: #0D0D0D;
+	background: #060606;
 	color: #fff;
 
 	.copyright {
